force-app/main/default/objects/OpenAI_Settings__mdt/OpenAI_Settings__mdt.object-meta.xml
<CustomObject>
    <label>OpenAI Settings</label>
    <pluralLabel>OpenAI Settings</pluralLabel>
</CustomObject>