force-app/main/default/objects/OpenAI_Settings__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>API Key for OpenAI</description>
    <inlineHelpText>Enter your OpenAI API key here</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>