force-app/main/default/objects/OpenAI_Settings__mdt/fields/Default_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Model__c</fullName>
    <defaultValue>&quot;gpt-4o&quot;</defaultValue>
    <description>Default OpenAI model to use</description>
    <inlineHelpText>The default OpenAI model to use for generating responses</inlineHelpText>
    <label>Default Model</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>