force-app/main/default/objects/OpenAI_Settings__mdt/fields/Default_Voice__c.field-meta.xml
<CustomField>
    <fullName>Default_Voice__c</fullName>
    <defaultValue>&quot;alloy&quot;</defaultValue>
    <description>Default voice for text-to-speech</description>
    <inlineHelpText>The default voice to use for text-to-speech (e.g., alloy, nova, echo, etc.)</inlineHelpText>
    <label>Default Voice</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>