force-app/main/default/objects/OpenAI_Settings__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether OpenAI integration is enabled</description>
    <inlineHelpText>Check to enable OpenAI API integration</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>